--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Assignment 2</title>
 </head>
 <body>
-<section class="">
+<section class="hero is-dark is-fullheight">
     <div class="hero-body">
-        <div class="">
-            <h1 class="">
+        <div class="container">
+            <h1 class="title">
                 Comp426
             </h1>
-            <h2 class="">
+            <h2 class="subtitle">
                 A web development class
             </h2>
         </div>
@@ -55,7 +55,7 @@
     </div>
 </section>
 <section class="section has-background-white">
-    <div class="">
+    <div class="container">
         <div class="content">
             <h1 class="title has-text-weight-bold">Consistency is Key</h1>
             <h5 class="subtitle has-text-grey has-text-weight-bold">Elements on a web page should be related and follow the same theme</h5>
@@ -74,7 +74,7 @@
         <hr>
         <div class="content has-text-right">
             <h1 class="title has-text-weight-light">Consistency is Key</h1>
-            <h5 class="subtitle has-text-grey has-text-weight-light	">Elements on a web page should be related and follow the same theme</h5>
+            <h5 class="subtitle has-text-grey">Elements on a web page should be related and follow the same theme</h5>
             <p>
 	    	So content that goes together should have a stylistic (color/size/background/container) relationship.
 	    </p>
@@ -115,13 +115,13 @@
         </div>
     </div>
 </section>
-<section class="">
-    <div class="">
+<section class="section">
+    <div class="container">
         <div class="content">
             <div class="">
                 <div class="column">
-                    <h1 class="">Hierarchy</h1>
-                    <h5 class="">Order of importance of each element</h5>
+                    <h1 class="title">Hierarchy</h1>
+                    <h5 class="subtitle has-text-grey">Order of importance of each element</h5>
                     <p>
 		    	When it comes to design and specifically typography (which is a massive part of web design), you want your content to be readable.
 			This means that when someone looks at it, they intuitively know which text to read first, second, and third.
@@ -133,9 +133,9 @@
                         Size is not the only way to define hierarchy – it can also be achieved with colour, spacing and weight.
 		    </p>
                 </div>
-                <div class="">
-                    <h1 class="">Measure</h1>
-                    <h5 class="">The width of a line of text</h5>
+                <div class="column">
+                    <h1 class="title">Measure</h1>
+                    <h5 class="subtitle has-text-grey">The width of a line of text</h5>
                     <p>
 		    	The term 'measure' describes the width of a text block.
 		    	If you're seeking to achieve the optimum reading experience it's clearly an important consideration.
@@ -154,7 +154,7 @@
 <section class="">
     <div class="container">
         <div class="columns">
-            <div class="column">
+            <div class="">
                 <h1 class="">Login</h1>
                 <form>
                     <div class="field">
@@ -164,14 +164,14 @@
                         </div>
                     </div>
                     <div class="field">
-                        <label class="">Password</label>
-                        <div class="">
-                            <input class="" type="password" placeholder="password123" name="password">
+                        <label class="label">Password</label>
+                        <div class="control">
+                            <input class="input" type="password" placeholder="password123" name="password">
                         </div>
                     </div>
                     <div class="field">
-                        <div class="">
-                            <label class="checkbox">
+                        <div class="control">
+                            <label class="label">
                                 <input type="checkbox" name="remember">
                                 Remember login?
                             </label>
@@ -190,24 +190,24 @@
                     <div class="field">
                         <label class="label">Username</label>
                         <div class="control">
-                            <input class="" type="text" placeholder="Cookie Monster 2.0" name="username">
+                            <input class="input" type="text" placeholder="Cookie Monster 2.0" name="username">
                         </div>
                     </div>
                     <div class="field">
-                        <label class="">Password</label>
-                        <div class="">
-                            <input class="" type="password" placeholder="password12345">
+                        <label class="label">Password</label>
+                        <div class="control">
+                            <input class="input" type="password" placeholder="password12345">
                         </div>
                     </div>
                     <div class="field">
-                        <label class="">Repeat Password</label>
-                        <div class="">
+                        <label class="label">Repeat Password</label>
+                        <div class="control">
                             <input class="input" type="password" placeholder="password12345" name="password">
                         </div>
                     </div>
                     <div class="field">
-                        <label class="">Account type</label>
-                        <div class="">
+                        <label class="label">Account type</label>
+                        <div class="control">
                             <div class="">
                                 <select name="accountType">
                                     <option>Student</option>
