--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="content">
             <h1 class="title">CSS Frameworks</h1>
-            <h5 class="">How to use a framework effectively</h5>
+            <h5 class="subtitle has-text-grey has-text-weight-light">How to use a framework effectively</h5>
             <p>
 	    	When it comes to developing websites, design can be a very fun aspect.
 		But in reality we often don't want to spend hours writing CSS.
@@ -115,11 +115,11 @@
         </div>
     </div>
 </section>
-<section class="section">
+<section class="section has-background-white">
     <div class="container">
         <div class="content">
             <div class="">
-                <div class="column">
+                <div class="">
                     <h1 class="title">Hierarchy</h1>
                     <h5 class="subtitle has-text-grey">Order of importance of each element</h5>
                     <p>
@@ -133,7 +133,7 @@
                         Size is not the only way to define hierarchy – it can also be achieved with colour, spacing and weight.
 		    </p>
                 </div>
-                <div class="column">
+                <div class="">
                     <h1 class="title">Measure</h1>
                     <h5 class="subtitle has-text-grey">The width of a line of text</h5>
                     <p>
@@ -151,11 +151,11 @@
         </div>
     </div>
 </section>
-<section class="">
+<section class="section">
     <div class="container">
         <div class="columns">
             <div class="">
-                <h1 class="">Login</h1>
+                <h1 class="title">Login</h1>
                 <form>
                     <div class="field">
                         <label class="label">Username</label>
@@ -171,7 +171,7 @@
                     </div>
                     <div class="field">
                         <div class="control">
-                            <label class="label">
+                            <label class="checkbox">
                                 <input type="checkbox" name="remember">
                                 Remember login?
                             </label>
@@ -185,7 +185,7 @@
                 </form>
             </div>
             <div class="">
-                <h1 class="">Signup</h1>
+                <h1 class="title">Signup</h1>
                 <form>
                     <div class="field">
                         <label class="label">Username</label>
@@ -208,7 +208,7 @@
                     <div class="field">
                         <label class="label">Account type</label>
                         <div class="control">
-                            <div class="">
+                            <div class="select">
                                 <select name="accountType">
                                     <option>Student</option>
                                     <option>Teacher</option>
