--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 <section class="section has-background-white">
     <div class="container">
         <div class="content">
-            <div class="">
-                <div class="">
+            <div class="columns">
+                <div class="column">
                     <h1 class="title">Hierarchy</h1>
                     <h5 class="subtitle has-text-grey">Order of importance of each element</h5>
                     <p>
@@ -133,7 +133,7 @@
                         Size is not the only way to define hierarchy – it can also be achieved with colour, spacing and weight.
 		    </p>
                 </div>
-                <div class="">
+                <div class="column">
                     <h1 class="title">Measure</h1>
                     <h5 class="subtitle has-text-grey">The width of a line of text</h5>
                     <p>
@@ -154,7 +154,7 @@
 <section class="section">
     <div class="container">
         <div class="columns">
-            <div class="">
+            <div class="column">
                 <h1 class="title">Login</h1>
                 <form>
                     <div class="field">
@@ -184,7 +184,7 @@
                     </div>
                 </form>
             </div>
-            <div class="">
+            <div class="column">
                 <h1 class="title">Signup</h1>
                 <form>
                     <div class="field">
